# Faceitui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: npm-publish.yml  release.yml
npm/faceitui/: .npmignore  cli.js  install.js  package.json  run.js
src/: ai.rs  api.rs  app.rs  config.rs  event.rs  main.rs  theme.rs  ui.rs
